# langchain-lotr-example

./: .gitignore  README.md  data.csv  pyproject.toml
lotr/: main.py
